Fix alignment of checkboxes on web compat form

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -406,16 +406,22 @@ sign-up-panel::after {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacingMd);
 }
 
 .report-section li {
   display: flex;
   align-items: flex-start;
-  margin-bottom: var(--spacingMd);
+  padding: 0;
+  margin: 0;
+  gap: var(--spacingSm);
 }
 
 .report-section input[type=checkbox]{
-  margin: 2px var(--spacingSm) 0 0; /* Custom Alignment Issue with Checkbox and Label */
+  margin: 0;
+  padding: 0;
   color: var(--colorGrey50);
 }
 
